WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
130073
[CSS Grid Layout] the "grid-template-areas" is not identified as computable property.
https://bugs.webkit.org/show_bug.cgi?id=130073
Summary
[CSS Grid Layout] the "grid-template-areas" is not identified as computable p...
Javier Fernandez
Reported
2014-03-11 01:47:12 PDT
The "grid-template-areas" property is a computable area, defined in the CSSComputedStyleDeclaration class with an specific computed value. However, it's not shown by the Web Inspector in the corresponding Computed tab. It seems that the root cause of this issue is that the property is not present in the CSSComputedStyleDeclaration::staticComputableProperties.
Attachments
Patch
(1.59 KB, patch)
2014-03-12 10:47 PDT
,
Javier Fernandez
no flags
Details
Formatted Diff
Diff
Patch
(1.58 KB, patch)
2014-03-14 02:50 PDT
,
Javier Fernandez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Javier Fernandez
Comment 1
2014-03-12 10:47:49 PDT
Created
attachment 226528
[details]
Patch
Sergio Villar Senin
Comment 2
2014-03-14 02:36:41 PDT
Comment on
attachment 226528
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=226528&action=review
> Source/WebCore/ChangeLog:11 > + No new tests, no change on behavior.
This is inexact, there is a change in behavior. Remove that line.
Javier Fernandez
Comment 3
2014-03-14 02:50:46 PDT
Created
attachment 226671
[details]
Patch
WebKit Commit Bot
Comment 4
2014-03-14 03:46:28 PDT
Comment on
attachment 226671
[details]
Patch Clearing flags on attachment: 226671 Committed
r165613
: <
http://trac.webkit.org/changeset/165613
>
WebKit Commit Bot
Comment 5
2014-03-14 03:46:33 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug