[CSS Grid Layout] the "grid-template-areas" is not identified as computable property. https://bugs.webkit.org/show_bug.cgi?id=130073

Patch by Javier Fernandez <jfernandez@igalia.com> on 2014-03-14
Reviewed by Sergio Villar Senin.

The "grid-template-areas" property is a computable CSS property, so it should be
handled accordingly by the Web Inspector.

No new tests.

* css/CSSComputedStyleDeclaration.cpp:
CSSPropertyWebkitGridTemplateAreas added to the computedProperties array.

Canonical link: https://commits.webkit.org/148203@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@165613 268f45cc-cd09-0410-ab3c-d52691b4dbfc